--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Matrl - Material Design Bootstrap 4 Template</title>
+    <title>Real Estate</title>
 
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
@@ -86,7 +86,7 @@
 
             <ul class="wpb-mobile-menu">
                 <li>
-                    <a class="active" href="#">
+                    <a class="" href="#">
                      Properties
                     </a>
                 </li>
@@ -96,25 +96,7 @@
                     </a>
                     <ul class="dropdown">
                         <li>
-                            <a href="about-us.html">About Us 1</a>
-                        </li>
-                        <li>
-                            <a href="about-us2.html">About Us 2</a>
-                        </li>
-                        <li>
-                            <a href="team.html">Team Members</a>
-                        </li>
-                        <li>
-                            <a href="services.html">Services</a>
-                        </li>
-                        <li>
-                            <a href="contact-us.html">Contact Us 1</a>
-                        </li>
-                        <li>
-                            <a href="contact-us2.html">Contact Us 2</a>
-                        </li>
-                        <li>
-                            <a href="404.html">404</a>
+                            <a href="about-us.html">About Us</a>
                         </li>
                     </ul>
                 </li>
@@ -129,7 +111,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="about.html">
+                    <a href="#">
                       Partners
                      </a>
                 </li>
@@ -138,48 +120,23 @@
     </header>
 
 
-    <div id="main-slide" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#main-slide" data-slide-to="0" class="active"></li>
-            <li data-target="#main-slide" data-slide-to="1"></li>
-            <li data-target="#main-slide" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="assets/images/slider/slider-bg1.jpg" alt="First slide">
-                <div class="carousel-caption d-md-block">
-                    <h1 class="animated wow fadeInDown hero-heading" data-wow-delay=".4s">Bootstrap 4 + Material Design</h1>
-                    <h5 class="animated fadeInUp wow hero-sub-heading" data-wow-delay=".6s">Material Design Meets With The Power of Bootstrap 4</h5>
-                    <a href="javascript:void(0)" class="animated fadeInUp wow btn btn-common" data-wow-delay=".8s"><i class="material-icons mdi mdi-lightbulb-outline"></i> Explore<div class="ripple-container"></div></a>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="assets/images/slider/slider-bg2.jpg" alt="Second slide">
-                <div class="carousel-caption d-md-block">
-                    <h1 class="animated wow fadeInLeft hero-heading" data-wow-delay=".7s">Refreshing Design Elements</h1>
-                    <h5 class="animated wow fadeInRight hero-sub-heading" data-wow-delay=".9s">Extensively Customizable Tons of UI Elements</h5>
-                    <a href="javascript:void(0)" class="animated fadeInUp wow btn btn-common" data-wow-delay=".6s"><i class="material-icons mdi mdi-cart-outline"></i> Purchase</a>
-                    <a href="javascript:void(0)" class="animated fadeInUp wow btn btn-border" data-wow-delay=".8s"><i class="material-icons mdi mdi-lightbulb-outline"></i> Learn More <div class="ripple-container"></div></a>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="assets/images/slider/slider-bg3.jpg" alt="Third slide">
-                <div class="carousel-caption d-md-block">
-                    <h1 class="animated wow fadeInDown hero-heading" data-wow-delay=".6s">Multi-purpose Template</h1>
-                    <h5 class="animated fadeInUp wow hero-sub-heading" data-wow-delay=".8s">Ready to Use for Business, Agency, Startup, Portfolio Sites and More...</h5>
-                    <a href="javascript:void(0)" class="animated fadeInUp wow btn btn-common" data-wow-delay=".8s"><i class="material-icons mdi mdi-arrow-collapse-down"></i> Download Now</a>
+     <div class="modren-section pt-5 mt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5">
+                    <h1 class="font-weight-bold">
+                        <span class="modren">Modren</span> & <span class="modren">Affordable</span> living for everyone
+                    </h1>
+                    <p class="mt-2"> We provide a complete service for the house financing, sale, purchase or rental of real estate. We have been operating in Madrid and Barcelona more than 15 years.</p>
+                   <div class="modren-vectors pt-2">
+                     <a href="#" class="modren-vector"><img src="assets/images/modren-vector.png" ></a>
+                     <a href="#" class="modren-vector ml-2"><img src="assets/images/modren-vector.png" ></a>
+                     <a href="#" class="modren-vector ml-2"><img src="assets/images/modren-vector.png"></a>
+                   </div>
                 </div>
             </div>
         </div>
-        <a class="carousel-control-prev" href="#main-slide" role="button" data-slide="prev">
-<span class="carousel-control" aria-hidden="true"><i class="mdi mdi-arrow-left" data-ripple-color="#F0F0F0"></i></span>
-<span class="sr-only">Previous</span>
-</a>
-        <a class="carousel-control-next" href="#main-slide" role="button" data-slide="next">
-<span class="carousel-control" aria-hidden="true"><i class="mdi mdi-arrow-right" data-ripple-color="#F0F0F0"></i></span>
-<span class="sr-only">Next</span>
-</a>
-    </div>
+     </div>
 
 
     <section class="matrl-about-section section-padding">
