--- a/index.html
+++ b/index.html
@@ -800,71 +800,17 @@ Know More
     <footer class="page-footer center-on-small-only  pt-0 footer-widget-container">
 
         <div class="container pt-5 mb-5">
-            <div class="row">
+            <div class="row pl-5 py-3">
 
-                <div class="col-md-6 col-lg-3 col-xl-3 footer-contact-widget">
-                    <h3 class="footer-title">About</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates eos minus expedita ipsum soluta voluptatem sed architecto.</p>
-                    <ul>
-                        <li>
-                            <a href="#"><i class="mdi mdi-facebook"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="mdi mdi-twitter"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="mdi mdi-dribbble"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="mdi mdi-github-circle"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="mdi mdi-linkedin"></i></a>
-                        </li>
-                    </ul>
+                <div class="col-md-3  footer-contact-widget">
+                  <img src="assets/images/paper-plane 1.png" class="w-75">
                 </div>
-
-
-                <div class="col-md-6 col-lg-3 col-xl-3 recent-widget">
-                    <h3 class="footer-title">Recent Posts</h3>
-                    <p><a href="#" class="dark-grey-text">Growth Hacking 101</a></p>
-                    <p><a href="#" class="dark-grey-text">30 UX Tips and Tricks</a></p>
-                    <p><a href="#" class="dark-grey-text">How to Scale Your Business</a></p>
-                    <p><a href="#" class="dark-grey-text">Getting Started with Sketch</a></p>
-                    <p><a href="#" class="dark-grey-text"></a>10 Tips to Validate Your Idea</p>
-                    <p><a href="#" class="dark-grey-text">SEO Guideline for Designers</a></p>
+                <div class="col-md-9 recent-widget  pt-4">
+                    <h3 class="footer-title">Subscribe to newsletter </h3>
+                    <p>Get the latest news and interesting offers and real estate</p>
+                    <input class="py-1 px-2 rounded border-0 " id="email" type="email" name="email" required="" placeholder="Your e-mail address" data-error="Please enter your Email">
+                    <a class="btn login ml-2 " href="#">Subscribe</a>
                 </div>
-
-
-                <div class="col-md-6 col-lg-3 col-xl-3 link-widget">
-                    <h3 class="footer-title">Quick link</h3>
-                    <ul>
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="#">Brands</a></li>
-                        <li><a href="portfolio-index.html">Portfolio</a></li>
-                        <li><a href="#">Support</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
-                        <li><a href="#">Site Map</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms of Service</a></li>
-                    </ul>
-                </div>
-
-
-                <div class="col-md-6 col-lg-3 col-xl-3 footer-contact">
-                    <h3 class="footer-title">Our Gallery</h3>
-                    <div class="widget widget-gallery">
-                        <ul class="magnific-gallery">
-                            <li><a href="#"><img src="assets/images/gallery/thum1.jpg" alt="instagram image"></a></li>
-                            <li><a href="#"><img src="assets/images/gallery/thum2.jpg" alt="instagram image"></a></li>
-                            <li><a href="#"><img src="assets/images/gallery/thum3.jpg" alt="instagram image"></a></li>
-                            <li><a href="#"><img src="assets/images/gallery/thum4.jpg" alt="instagram image"></a></li>
-                            <li><a href="#"><img src="assets/images/gallery/thum5.jpg" alt="instagram image"></a></li>
-                            <li><a href="#"><img src="assets/images/gallery/thum6.jpg" alt="instagram image"></a></li>
-                        </ul>
-                    </div>
-                </div>
-
             </div>
         </div>
 
