13-01-2022 finance page add

--- a/Financing eligibility Calculator.html
+++ b/Financing eligibility Calculator.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Blogs</title>
+    <title>Financing Eligibility Calculator</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
@@ -125,75 +125,112 @@
             </ul>
         </nav>
     </header>
-
-
-     <div class=" section-padding">
-        <div class="container">
-            <div class="row pb-5">
-                <div class="col-md-12 pt-4 text-center blog-head">
-                    <h1 class="hero-heading">
-                        Welcome to the <span class="modren">Mortgage Bazaar</span> , blogs
-                    </h1>
-                    <p class="mt-2 text-center"> We provide a complete service for the house financing, sale, purchase or rental of real estate. We have been operating in Madrid and Barcelona more than 15 years.</p>
+    <div class=" text-white  section-padding">
+        <div class="financing-ortgage-head py-4">
+               <div class="row w-100">
+                <div class="col-md-2 col-lg-2 col-xl-2">
+                    <img src="assets/images/Financing_ortgage/finacing-ghar.png" class="finacing-ghar-image ">
+                    <div class="finacing-ghar-content text-center">
+                        <span class="text-dark font-weight-bold">Looking for home financing?</span>
+                    </div>
+                </div>
+                <div class="col-md-10 col-lg-10 col-xl-10  pt-5 mt-3 pl-4 ">
+                    <h1 class="font-weight-bold "> Eligibility Calculator</h1>
+                    <p class="text-white">stimate how much you can borrow with our easy to use eligibility calculator</p>
+                </div>
+               </div>
+        </div>
+    </div>
+    <div class="text-right finacing-vector">
+        <img src="/assets/images/Financing_ortgage/financing aroow.png">
+    </div>
+    <div class="pb-5">
+       <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-lg-4 col-xl-4 mt-3 p-3 rounded loan-calculator">
+                <div class="d-flex justify-content-between">
+                    <a href="#"><img src="/assets/images/index-images/fi_chevron-left.png"></a>
+                    <span class="font-weight-bold loan-heading">Loan Calculator</span>
+                    <a href="#"><img src="/assets/images/index-images/fi_more-vertical.png"></a>
+                </div>
+                <div class="resident bg-white p-3 mx-2 mt-5 rounded">
+                 <h6 class="font-weight-bold">Residency Status</h6>
+                 <select class="form-control border p-2" id="" name="">
+                    <option class="font-weight-bold ">UAE Resident</option>
+                    <option class="font-weight-bold">PAK Resident</option>
+                    <option class="font-weight-bold">IND Resident</option>
+                    <option class="font-weight-bold">BAN Resident</option>
+                  </select>
+                </div>
+                <div class=" loan-bar bg-white p-3 mx-2 mt-4 rounded">
+                    <h6 class="font-weight-bold">Your Age</h6>
+                    <input id="" class="form-control" type="range" value="0" min="0" max="100">
+                    <div class=" ages d-flex justify-content-between">
+                    <span >18 years</span>
+                    <span >60 years</span>
+                    </div>
+                   </div>
+                   <div class="resident bg-white p-3 mx-2 mt-4 rounded">
+                    <h6 class="font-weight-bold">Monthly Income</h6>
+                    <input class="  rounded form-control border p-2 " id="" type="" name="" required="" placeholder="40000" data-error="">
+                   </div>
+                   <div class="loan-bar bg-white p-3 mx-2 mt-4 mb-4 rounded">
+                    <h6 class="font-weight-bold">Loan Length</h6>
+                    <input id="" class="form-control" type="range" value="0" min="0" max="100">
+                    <div class=" ages d-flex justify-content-between">
+                    <span >2 years</span>
+                    <span >10 years</span>
+                    </div>
+                   </div>
+                   <div class=" bg-white p-4  mt-5 mb-3 rounded">
+                    <a class="btn-block text-center py-2 rounded apply-loan text-white text-uppercase font-weight-bold" href="#">Apply Loan</a>
+                   </div>   
+            </div>
+            <div class="col-md-8 col-lg-8 col-xl-8 mt-3">
+                <div class=" d-flex loan-calculator-side rounded">
+                    <div class="col-md-7 col-lg-7 col-xl-7 py-5 pl-4">
+                      <div>
+                        <span class="font-weight-bold">
+                            You could borrow around <strong class="d-block font-weight-bold">AED</strong>
+                            <strong class="d-block font-weight-bold">1,034,760</strong>
+                            from the bank.
+                        </span>
+                        <div class="py-5">
+                            <span class="font-weight-bold ">
+                                with a monthly payment of <strong class="d-block font-weight-bold">AED</strong>
+                                <strong class="d-block font-weight-bold">17, 240</strong>
+                                in 5 years.
+                            </span>
+                      </div>
+                    </div>
+                </div>
+                <div class="col-md-5 col-lg-5 col-xl-5 px-4 py-5" >
+                    <img src="assets/images/index-images/ghar 1.png" class="w-100">
+                    <div class="text-center px-3 pt-2"> 
+                        <p class="text-center">This value could get you a 1 to  2 bedroom(s) apartment in  the UAE</p>
+                    </div>
                 </div>
             </div>
+            <div class="  text-white mt-4 text-center px-5 mortgage-process  py-5" style="background-color:#00b0bb;">
+                <h5 class="">Start your hassle-free mortgage process now</h5>
+                <p class="text-white text-center mt-4">With a few details, you can get a quick preview of the loan amount you can get from our bank partners
+                </p>
+                <div class="text-center mt-5">
+                    <a href="#" class="  text-white  px-4 font-weight-bold py-2  ">Let's Get Started<div class="ripple-container"></div></a>
+                   </div>
+               </div>
         </div>
+        </div>
+       </div>
+    </div>
+    <div class="let-the-future text-center text-white pt-5 ">
+     <div>
+        <h1 class="font-weight-bold">Let the future begin</h1>
+     <p class="text-center text-white" style="opacity: 1;">Home buying should be an easy, transparent process that always ends  in celebration. We're here to make that come true.
+    </p>
+    <a href="#" class="martal-button rounded-0 btn px-5 py-2 font-weight-bold ">Get Started</a>
      </div>
-
-    <section class="blogs-section section-padding pt-3 pb-5">
-        <div class="container blogs  py-4 px-4">
-           <div class="row blog-box">
-            <div class="col-md-6 pt-2">
-                <h3 class="modren font-weight-bold">Best areas to live in Dubai</h3>
-                <span class="blog-date font-weight-bold">Published · November 21, 2022</span>
-                <p class="mt-4">Dubai is one of the most cosmopolitan cities in the world and home to over 3 million people. While the city is well known for its man-made islands and ultra-modern architecture,</p>
-                <a href="#" class="blog-link">Read More</a>
-            </div>
-            <div class="col-md-6">
-                <img src="assets/images/blogs-images/blog-image.png" class="w-100">
-            </div>
-           </div>
-        </div>
-    </section>
-     <section class="blog-cards section-padding py-2">
-        <div class="container">
-            <div class="row pb-4">
-                <div class="col-md-6 blog-card py-2">
-                    <img src="assets/images/blogs-images/blog-image-1.png" class="w-100">
-                    <div class=" pt-2 blog-box text-center">
-                        <h3 class="modren font-weight-bold">Best areas to live in Dubai</h3>
-                        <span class="blog-date font-weight-bold">Published · November 21, 2022</span>
-                        <p class="mt-4">Dubai is one of the most cosmopolitan cities in the world and home to over 3 million people. While the city is well known for its man-made islands and ultra-modern architecture,</p>
-                        <a href="#" class="blog-link">Read More</a>
-                    </div>
-                </div>
-                <div class="col-md-6 blog-card blog-card-2 py-2">
-                    <img src="assets/images/blogs-images/blog-image-1.png" class="w-100">
-                    <div class=" pt-2 blog-box text-center">
-                        <h3 class="modren font-weight-bold">Best areas to live in Dubai</h3>
-                        <span class="blog-date font-weight-bold">Published · November 21, 2022</span>
-                        <p class="mt-4">Dubai is one of the most cosmopolitan cities in the world and home to over 3 million people. While the city is well known for its man-made islands and ultra-modern architecture,</p>
-                        <a href="#" class="blog-link">Read More</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="blogs-section section-padding pb-5">
-        <div class="container  blogs py-4 px-4">
-           <div class="row blog-box ">
-            <div class="col-md-6">
-                <img src="assets/images/blogs-images/blog-image-1.png" class="w-100">
-            </div>
-            <div class="col-md-6 pt-2">
-                <h3 class="modren font-weight-bold">Best areas to live in Dubai</h3>
-                <span class="blog-date font-weight-bold">Published · November 21, 2022</span>
-                <p class="mt-4">Dubai is one of the most cosmopolitan cities in the world and home to over 3 million people. While the city is well known for its man-made islands and ultra-modern architecture,</p>
-                <a href="#" class="blog-link">Read More</a>
-            </div>
-           </div>
-        </div>
-    </section>
+    </div>
     <footer class="page-footer center-on-small-only  pt-0 footer-widget-container">
 
         <div class="container pt-5 mb-5">
