--- a/aboutus.html
+++ b/aboutus.html
@@ -35,11 +35,11 @@
             <span class="mdi mdi-menu"></span>
             <span class="mdi mdi-menu"></span>
           </button>
-          <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="" class="w-100"></a>
+          <a class="navbar-brand" href="index.html"><img src="assets/images/index-images/footer logo.png" alt="" class="w-100"></a>
         </div>
         
-        <div class="collapse navbar-collapse" id="main-navbar">
-            <ul class="navbar-nav mr-auto w-100 justify-content-center">
+        <div class="collapse navbar-collapse pt-2" id="main-navbar">
+            <ul class="navbar-nav about-us mr-auto w-100 justify-content-center">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                        Properties
@@ -124,8 +124,8 @@
                     <h1 class="font-weight-bold">
                         How we quickly became the <span class="modren">biggest player</span> in the market
                     </h1>
-                    <div class="modren-vectors pt-2">
-                     <a href="#" class="modren-vector"><img src="assets/images/aboutus/Group 6904.png" ></a>
+                    <div class="about-modren-vectors ">
+                     <a href="#" class="about-modren-vector"><img src="assets/images/aboutus/Group 6904.png" class="w-100"></a>
                     </div>
                 </div>
 
@@ -198,7 +198,7 @@
             <img src="assets/images/aboutus/dotsr.png" class="float-right dots-right">
         </div>
     </section>
-
+   
 
     <section class="team">
         <div class="team-wrapper container">
@@ -295,11 +295,11 @@
                 <div class="row">
                     <div class="col-md-12 text-center">
                         <div class="">
-                        <img src="assets/images/footer logo.png" alt="">
+                        <img src="assets/images/index-images/footer logo.png" alt="">
                         </div>
                         <div class="footer-logo">
-                        <img src="assets/images/Real Estate.png" alt=""> 
-                        </div>
+                            <img src="assets/images/index-images/Real Estate.png" alt=""> 
+                            </div>
                     </div>
                 </div>
             </div>
