--- a/Financing_ ortgage Calculator-1.html
+++ b/Financing_ ortgage Calculator-1.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Real Estate | Finance</title>
+    <title>financing-ortgage calculator-1</title>
 
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     
