--- a/index.html
+++ b/index.html
@@ -56,26 +56,32 @@
                             </a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="Financing_ ortgage Calculator.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                              Financing <i class="fa-solid fa-caret-down ml-1"></i>
                              </a>
                            
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="dropdown-menu" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="aboutus.html" onclick="aboutus()" data-toggle="dropdown" id="dropdown-menu" aria-haspopup="true" aria-expanded="false">
                               About Us
                              </a>
                              <div class="dropdown-menu" aria-labelledby="dropdown-menu" >
                                 <a class="dropdown-item" href="blogs.html">Blogs</a>
                             </div>
+                            <script>
+                                    
+                                function aboutus() {
+                                    window.location.href = 'aboutus.html'; 
+                                }
+                            </script>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="career.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                              Careers
                             </a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a   class="nav-link dropdown-toggle" href="partner.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                              Partners
                             </a>
                         </li>
