--- a/Financing_ ortgage Calculator.html
+++ b/Financing_ ortgage Calculator.html
@@ -53,64 +53,99 @@
                      <span class="mdi mdi-menu"></span>
                      <span class="mdi mdi-menu"></span>
                     </button>
-                    <a class="navbar-brand" href=""><img src="assets/images/index-images/logo.png" alt="" class="w-100"></a>
+                    <a class="navbar-brand" href="index.html"><img src="assets/images/index-images/logo.png" alt="" class="w-100"></a>
                 </div>
-                <div class="collapse navbar-collapse" id="main-navbar">
+                <div class="collapse navbar-collapse pt-2" id="main-navbar">
                     <ul class="navbar-nav mr-auto w-100 justify-content-center">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-dark" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link " href="index.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                Properties
                             </a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-dark" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                             Financing
-                             </a>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="about-us.html">About Us</a>
+                            <div class="dropdown-menu" aria-labelledby="dropdown-menu" >
+                                <a class="dropdown-item" href="index.html">Homepage</a>
+                                <a class="dropdown-item" href="properties.html">Properties</a>
+                                <a class="dropdown-item" href="properties-1.html">Properties-1</a>
+                                <a class="dropdown-item" href="properties-2.html">Properties-2</a>
+                                <a class="dropdown-item" href="property-detail-page.html">Property-detail-page</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-dark" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="Financing_ ortgage Calculator.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                             Financing <i class="fa-solid fa-caret-down ml-1"></i>
+                             </a>
+                             <div class="dropdown-menu" aria-labelledby="dropdown-menu" >
+                                <a class="dropdown-item" href="Financing eligibility Calculator.html">Financing Eligibility Calculator</a>
+                                <a class="dropdown-item" href="Financing_ ortgage Calculator-1.html">financing-ortgage calculator-1</a>
+                                <a class="dropdown-item" href="Financing_ ortgage Calculator.html">financing-ortgage calculator</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" target="_self" href="aboutus.html" data-toggle="dropdown" id="dropdown-menu" aria-haspopup="true" aria-expanded="false">
                               About Us
                              </a>
+                             <div class="dropdown-menu" aria-labelledby="dropdown-menu" >
+                                <a class="dropdown-item" href="aboutus.html">About Us</a>
+                                <a class="dropdown-item" href="blogs.html">Blogs</a>
+                                <a class="dropdown-item" href="contact-us.html">Contact Us</a>
+                                <a class="dropdown-item" href="privacy.html">Privacy Policy</a>
+                                <a class="dropdown-item" href="sing-in.html">Sign Up</a>
+                            </div>
                         </li>
+                    
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-dark" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="career.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                              Careers
                             </a>
+                            <div class="dropdown-menu" aria-labelledby="dropdown-menu" >
+                             <a class="dropdown-item" href="career.html">Careers</a>
+                            </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-dark" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a   class="nav-link dropdown-toggle" href="partner.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                              Partners
                             </a>
+                            <div class="dropdown-menu" aria-labelledby="dropdown-menu" >
+                                <a class="dropdown-item" href="partner.html">Partners</a>
+                               </div>
                         </li>
                     </ul>
-                    <a class="btn login mr-2 " href="#">Login</a>
-                    <a class="btn login" href="#">Get Started</a>
+                    <a class="btn login mr-2 " href="login.html">Login</a>
+                    <a class="btn login" href="get-started.html">Get Started</a>
                 </div>
             </div>
 
             <ul class="wpb-mobile-menu">
                 <li>
-                    <a class="" href="#">
+                    <a class="" href="index.html">
                      Properties
                     </a>
+                    <ul class="dropdown">
+                        <a class="" href="properties.html">Properties</a>
+                        <a class="" href="properties-1.html">Properties-1</a>
+                        <a class="" href="properties-2.html">Properties-2</a>
+                        <a class="" href="property-detail-page.html">Property-detail-page</a>
+                    </ul>
                 </li>
                 <li>
                     <a href="#">
                     Financing
                     </a>
                     <ul class="dropdown">
-                        <li>
-                            <a href="about-us.html">About Us</a>
-                        </li>
+                        <a class="dropdown-item" href="Financing eligibility Calculator.html">Financing Eligibility Calculator</a>
+                                <a class="dropdown-item" href="Financing_ ortgage Calculator-1.html">financing-ortgage calculator-1</a>
+                                <a class="dropdown-item" href="Financing_ ortgage Calculator.html">financing-ortgage calculator</a>
                     </ul>
                 </li>
                 <li>
                     <a href="#">
                         About Us
                     </a>
+                    <ul class="dropdown">
+                        <a class="dropdown-item" href="blogs.html">Blogs</a>
+                        <a class="dropdown-item" href="contact-us.html">Contact Us</a>
+                        <a class="dropdown-item" href="privacy.html">Privacy Policy</a>
+                        <a class="dropdown-item" href="blogs.html">Sign Up</a>
+                    </ul>
                 </li>
                 <li>
                     <a href="#">
@@ -121,6 +156,12 @@
                     <a href="#">
                       Partners
                      </a>
+                </li>
+                <li>
+                    <a class="" href="login.html">Login</a>
+                </li>
+                <li>
+                    <a class="" href="get-started.html">Get Started</a>
                 </li>
             </ul>
         </nav>
@@ -258,14 +299,16 @@
         <div class="container pt-5 mb-5">
             <div class="row pl-5 py-3">
 
-                <div class="col-md-3  footer-contact-widget">
-                  <img src="assets/images/index-images/paper-plane 1.png" class="w-75">
+                <div class="col-md-3 col-lg-3 col-xl-3 footer-contact-widget ">
+                  <img src="assets/images/index-images/paper-plane 1.png" class="">
                 </div>
-                <div class="col-md-9 recent-widget  pt-4">
+                <div class="col-md-9 col-lg-9 col-xl-9 recent-widget   pl-5">
                     <h3 class="footer-title">Subscribe to newsletter </h3>
                     <p>Get the latest news and interesting offers and real estate</p>
-                    <input class="py-1 px-2 rounded border-0 " id="email" type="email" name="email" required="" placeholder="Your e-mail address" data-error="Please enter your Email">
-                    <a class="btn login ml-2 " href="#">Subscribe</a>
+                    <div class="pt-2">
+                        <input class="foot-email  rounded border-0 " id="email" type="email" name="email" required="" placeholder="Your e-mail address" data-error="Please enter your Email">
+                        <a class="btn foot-btn ml-2 font-weight-bold" href="#">Subscribe</a>
+                    </div>
                 </div>
             </div>
         </div>
