--- a/aboutus.html
+++ b/aboutus.html
@@ -41,32 +41,55 @@
         <div class="collapse navbar-collapse pt-2" id="main-navbar">
             <ul class="navbar-nav about-us mr-auto w-100 justify-content-center">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link " href="index.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                        Properties
                     </a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                     Financing
-                     </a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="about-us.html">About Us</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown-menu" >
+                        <a class="dropdown-item" href="index.html">Homepage</a>
+                        <a class="dropdown-item" href="properties.html">Properties</a>
+                        <a class="dropdown-item" href="properties-1.html">Properties-1</a>
+                        <a class="dropdown-item" href="properties-2.html">Properties-2</a>
+                        <a class="dropdown-item" href="property-detail-page.html">Property-detail-page</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="Financing_ ortgage Calculator.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                     Financing <i class="fa-solid fa-caret-down ml-1"></i>
+                     </a>
+                     <div class="dropdown-menu" aria-labelledby="dropdown-menu" >
+                        <a class="dropdown-item" href="Financing eligibility Calculator.html">Financing Eligibility Calculator</a>
+                        <a class="dropdown-item" href="Financing_ ortgage Calculator-1.html">financing-ortgage calculator-1</a>
+                        <a class="dropdown-item" href="Financing_ ortgage Calculator.html">financing-ortgage calculator</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" target="_self" href="aboutus.html" data-toggle="dropdown" id="dropdown-menu" aria-haspopup="true" aria-expanded="false">
                       About Us
                      </a>
+                     <div class="dropdown-menu" aria-labelledby="dropdown-menu" >
+                        <a class="dropdown-item" href="aboutus.html">About Us</a>
+                        <a class="dropdown-item" href="blogs.html">Blogs</a>
+                        <a class="dropdown-item" href="contact-us.html">Contact Us</a>
+                        <a class="dropdown-item" href="privacy.html">Privacy Policy</a>
+                        <a class="dropdown-item" href="sing-in.html">Sign Up</a>
+                    </div>
                 </li>
+            
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="career.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      Careers
                     </a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown-menu" >
+                     <a class="dropdown-item" href="career.html">Careers</a>
+                    </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a   class="nav-link dropdown-toggle" href="partner.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      Partners
                     </a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown-menu" >
+                        <a class="dropdown-item" href="partner.html">Partners</a>
+                       </div>
                 </li>
             </ul>
             <a class="btn login mr-2 " href="#">Login</a>
@@ -74,38 +97,56 @@
         </div>
       </div>
 
-        <ul class="wpb-mobile-menu">
-            <li>
-                <a class="" href="#">
-                 Properties
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                Financing
-                </a>
-                <ul class="dropdown">
-                    <li>
-                        <a href="about-us.html">About Us</a>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <a href="#">
-                    About Us
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                 Careers
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                  Partners
-                 </a>
-            </li>
-        </ul>
+      <ul class="wpb-mobile-menu">
+        <li>
+            <a class="" href="index.html">
+             Properties
+            </a>
+            <ul class="dropdown">
+                <a class="" href="properties.html">Properties</a>
+                <a class="" href="properties-1.html">Properties-1</a>
+                <a class="" href="properties-2.html">Properties-2</a>
+                <a class="" href="property-detail-page.html">Property-detail-page</a>
+            </ul>
+        </li>
+        <li>
+            <a href="#">
+            Financing
+            </a>
+            <ul class="dropdown">
+                <a class="dropdown-item" href="Financing eligibility Calculator.html">Financing Eligibility Calculator</a>
+                        <a class="dropdown-item" href="Financing_ ortgage Calculator-1.html">financing-ortgage calculator-1</a>
+                        <a class="dropdown-item" href="Financing_ ortgage Calculator.html">financing-ortgage calculator</a>
+            </ul>
+        </li>
+        <li>
+            <a href="#">
+                About Us
+            </a>
+            <ul class="dropdown">
+                <a class="dropdown-item" href="blogs.html">Blogs</a>
+                <a class="dropdown-item" href="contact-us.html">Contact Us</a>
+                <a class="dropdown-item" href="privacy.html">Privacy Policy</a>
+                <a class="dropdown-item" href="blogs.html">Sign Up</a>
+            </ul>
+        </li>
+        <li>
+            <a href="#">
+             Careers
+            </a>
+        </li>
+        <li>
+            <a href="#">
+              Partners
+             </a>
+        </li>
+        <li>
+            <a class="" href="login.html">Login</a>
+        </li>
+        <li>
+            <a class="" href="get-started.html">Get Started</a>
+        </li>
+    </ul>
     </nav>
 
    <div class="bg-image text-white" style="background-image: url('assets/images/aboutus/Rectangle 163.png');background-size: cover;
@@ -273,7 +314,7 @@
                     <img src="assets/images/aboutus/Rectangle 166.png" class="img">
                 </div>
 
-                <div class="col-lg-6 col-md-12 px-0">
+                <div class="col-lg-6 col-md-12 px-0 ">
                     <div class="contactus p-5">
                         <h1 class="font-weight-bold"><span class="green">Come</span> <span class="blue">and say</span> <span class="green">hello</span></h1>
                         <h4 class="font-weight-bold px-2 py-4">In the area? Our doors are always open. Feel free to stop by for a quick chat.</h4>
@@ -321,7 +362,6 @@
     <script src="assets/js/jquery-min.js"></script>
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/color-switcher.js"></script>
     <script src="assets/js/jquery.mixitup.min.js"></script>
     <script src="assets/js/jquery.inview.js"></script>
     <script src="assets/js/jquery.counterup.min.js"></script>
