--- a/sing-in.html
+++ b/sing-in.html
@@ -34,97 +34,129 @@
     <link rel="stylesheet" type="text/css" href="assets/css/colors/blue.css" media="screen" />
 </head>
 
-<body>
-
-    <header id="header">
-        <nav class="navbar navbar-expand-lg scrolling-navbar nav-bg">
-            <div class="container">
-                <div class="navbar-header">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
-                     <span class="sr-only">Toggle navigation</span>
-                     <span class="mdi mdi-menu"></span>
-                     <span class="mdi mdi-menu"></span>
-                     <span class="mdi mdi-menu"></span>
-                    </button>
-                    <a class="navbar-brand" href="index.html"><img src="assets/images/index-images/logo.png" alt="" class="w-100"></a>
-                </div>
-                <div class="collapse navbar-collapse pt-2" id="main-navbar">
-                    <ul class="navbar-nav mr-auto w-100 justify-content-center">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="index.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                               Properties
-                            </a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                             Financing <i class="fa-solid fa-caret-down ml-1"></i>
-                             </a>
-                            
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#"  id="dropdown-menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              About Us
-                             </a>
-                             <div class="dropdown-menu" aria-labelledby="dropdown-menu" >
-                                <a class="dropdown-item" href="blogs.html">Blogs</a>
-                            </div>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                             Careers
-                            </a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                             Partners
-                            </a>
-                        </li>
-                    </ul>
-                    <a class="btn login mr-2 " href="login.html">Login</a>
-                    <a class="btn login" href="get-started.html">Get Started</a>
-                </div>
+<b   <header id="header">
+    <nav class="navbar navbar-expand-lg scrolling-navbar nav-bg">
+        <div class="container">
+            <div class="navbar-header">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
+                 <span class="sr-only">Toggle navigation</span>
+                 <span class="mdi mdi-menu"></span>
+                 <span class="mdi mdi-menu"></span>
+                 <span class="mdi mdi-menu"></span>
+                </button>
+                <a class="navbar-brand" href="index.html"><img src="assets/images/index-images/logo.png" alt="" class="w-100"></a>
             </div>
+            <div class="collapse navbar-collapse pt-2" id="main-navbar">
+                <ul class="navbar-nav mr-auto w-100 justify-content-center">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link " href="index.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                           Properties
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown-menu" >
+                            <a class="dropdown-item" href="index.html">Homepage</a>
+                            <a class="dropdown-item" href="properties.html">Properties</a>
+                            <a class="dropdown-item" href="properties-1.html">Properties-1</a>
+                            <a class="dropdown-item" href="properties-2.html">Properties-2</a>
+                            <a class="dropdown-item" href="property-detail-page.html">Property-detail-page</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="Financing_ ortgage Calculator.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                         Financing <i class="fa-solid fa-caret-down ml-1"></i>
+                         </a>
+                         <div class="dropdown-menu" aria-labelledby="dropdown-menu" >
+                            <a class="dropdown-item" href="Financing eligibility Calculator.html">Financing Eligibility Calculator</a>
+                            <a class="dropdown-item" href="Financing_ ortgage Calculator-1.html">financing-ortgage calculator-1</a>
+                            <a class="dropdown-item" href="Financing_ ortgage Calculator.html">financing-ortgage calculator</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" target="_self" href="aboutus.html" data-toggle="dropdown" id="dropdown-menu" aria-haspopup="true" aria-expanded="false">
+                          About Us
+                         </a>
+                         <div class="dropdown-menu" aria-labelledby="dropdown-menu" >
+                            <a class="dropdown-item" href="aboutus.html">About Us</a>
+                            <a class="dropdown-item" href="blogs.html">Blogs</a>
+                            <a class="dropdown-item" href="contact-us.html">Contact Us</a>
+                            <a class="dropdown-item" href="privacy.html">Privacy Policy</a>
+                            <a class="dropdown-item" href="sing-in.html">Sign Up</a>
+                        </div>
+                    </li>
+                
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="career.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                         Careers
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown-menu" >
+                         <a class="dropdown-item" href="career.html">Careers</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a   class="nav-link dropdown-toggle" href="partner.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                         Partners
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown-menu" >
+                            <a class="dropdown-item" href="partner.html">Partners</a>
+                           </div>
+                    </li>
+                </ul>
+                <a class="btn login mr-2 " href="login.html">Login</a>
+                <a class="btn login" href="get-started.html">Get Started</a>
+            </div>
+        </div>
 
-            <ul class="wpb-mobile-menu">
-                <li>
-                    <a class="" href="index.html">
-                     Properties
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                    Financing
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        About Us
-                    </a>
-                    <ul class="dropdown">
-                        <li>
-                            <a href="blogs.html">blogs</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#">
-                     Careers
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                      Partners
-                     </a>
-                </li>
-                <li>
-                    <a class="" href="login.html">Login</a>
-                </li>
-                <li>
-                    <a class="" href="get-started.html">Get Started</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+        <ul class="wpb-mobile-menu">
+            <li>
+                <a class="" href="index.html">
+                 Properties
+                </a>
+                <ul class="dropdown">
+                    <a class="" href="properties.html">Properties</a>
+                    <a class="" href="properties-1.html">Properties-1</a>
+                    <a class="" href="properties-2.html">Properties-2</a>
+                    <a class="" href="property-detail-page.html">Property-detail-page</a>
+                </ul>
+            </li>
+            <li>
+                <a href="#">
+                Financing
+                </a>
+                <ul class="dropdown">
+                    <a class="dropdown-item" href="Financing eligibility Calculator.html">Financing Eligibility Calculator</a>
+                            <a class="dropdown-item" href="Financing_ ortgage Calculator-1.html">financing-ortgage calculator-1</a>
+                            <a class="dropdown-item" href="Financing_ ortgage Calculator.html">financing-ortgage calculator</a>
+                </ul>
+            </li>
+            <li>
+                <a href="#">
+                    About Us
+                </a>
+                <ul class="dropdown">
+                    <a class="dropdown-item" href="blogs.html">Blogs</a>
+                    <a class="dropdown-item" href="contact-us.html">Contact Us</a>
+                    <a class="dropdown-item" href="privacy.html">Privacy Policy</a>
+                    <a class="dropdown-item" href="blogs.html">Sign Up</a>
+                </ul>
+            </li>
+            <li>
+                <a href="#">
+                 Careers
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                  Partners
+                 </a>
+            </li>
+            <li>
+                <a class="" href="login.html">Login</a>
+            </li>
+            <li>
+                <a class="" href="get-started.html">Get Started</a>
+            </li>
+        </ul>
+    </nav>
+</header>
     <div class="login-section section-padding">
         <div class="container">
            <div class=" ">
@@ -220,7 +252,6 @@
     <script src="assets/js/jquery-min.js"></script>
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/color-switcher.js"></script>
     <script src="assets/js/jquery.mixitup.min.js"></script>
     <script src="assets/js/jquery.inview.js"></script>
     <script src="assets/js/jquery.counterup.min.js"></script>
