--- a/properties.html
+++ b/properties.html
@@ -78,7 +78,8 @@
                             <a class="dropdown-item" href="Financing eligibility Calculator.html">Financing Eligibility Calculator</a>
                             <a class="dropdown-item" href="Financing_ ortgage Calculator-1.html">financing-ortgage calculator-1</a>
                             <a class="dropdown-item" href="Financing_ ortgage Calculator.html">financing-ortgage calculator</a>
-                        </div>
+                            <a class="dropdown-item" href="Estimate-mortgage.html">Estimate Mortgage</a>
+                          </div>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link" href="aboutus.html" data-bs-toggle="dropdown">
@@ -113,56 +114,57 @@
         </div>
 
         <ul class="wpb-mobile-menu">
-            <li>
-                <a class="" href="index.html">
-                 Properties
-                </a>
-                <ul class="dropdown">
+          <li>
+              <a class="" href="index.html">
+               Properties
+              </a>
+              <ul class="dropdown">
                   <a class="" href="Homepage-option-2.html">Homepage-option-2</a>
-                    <a class="" href="properties.html">Properties</a>
-                    <a class="" href="properties-1.html">Properties-1</a>
-                    <a class="" href="properties-2.html">Properties-2</a>
-                    <a class="" href="property-detail-page.html">Property-detail-page</a>
-                </ul>
-            </li>
-            <li>
-                <a href="#">
-                Financing
-                </a>
-                <ul class="dropdown">
-                    <a class="dropdown-item" href="Financing eligibility Calculator.html">Financing Eligibility Calculator</a>
-                            <a class="dropdown-item" href="Financing_ ortgage Calculator-1.html">financing-ortgage calculator-1</a>
-                            <a class="dropdown-item" href="Financing_ ortgage Calculator.html">financing-ortgage calculator</a>
-                </ul>
-            </li>
-            <li>
-                <a href="#">
-                    About Us
-                </a>
-                <ul class="dropdown">
-                    <a class="dropdown-item" href="blogs.html">Blogs</a>
-                    <a class="dropdown-item" href="contact-us.html">Contact Us</a>
-                    <a class="dropdown-item" href="privacy.html">Privacy Policy</a>
-                    <a class="dropdown-item" href="blogs.html">Sign Up</a>
-                </ul>
-            </li>
-            <li>
-                <a href="#">
-                 Careers
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                  Partners
-                 </a>
-            </li>
-            <li>
-                <a class="" href="login.html">Login</a>
-            </li>
-            <li>
-                <a class="" href="get-started.html">Get Started</a>
-            </li>
-        </ul>
+                  <a class="" href="properties.html">Properties</a>
+                  <a class="" href="properties-1.html">Properties-1</a>
+                  <a class="" href="properties-2.html">Properties-2</a>
+                  <a class="" href="property-detail-page.html">Property-detail-page</a>
+              </ul>
+          </li>
+          <li>
+              <a href="Financing eligibility Calculator.html">
+              Financing
+              </a>
+              <ul class="dropdown">
+                          <a class="" href="Financing eligibility Calculator.html">Financing Eligibility Calculator</a>
+                          <a class="" href="Financing_ ortgage Calculator-1.html">financing-ortgage calculator-1</a>
+                          <a class="" href="Financing_ ortgage Calculator.html">financing-ortgage calculator</a>
+                          <a class="" href="Estimate-mortgage.html">Estimate Mortgage</a>
+                      </ul>
+          </li>
+          <li>
+              <a href="aboutus.html">
+                  About Us
+              </a>
+              <ul class="dropdown">
+                  <a class="" href="blogs.html">Blogs</a>
+                  <a class="" href="contact-us.html">Contact Us</a>
+                  <a class="" href="privacy.html">Privacy Policy</a>
+                  <a class="" href="blogs.html">Sign Up</a>
+              </ul>
+          </li>
+          <li>
+              <a href="career.html">
+               Careers
+              </a>
+          </li>
+          <li>
+              <a href="partner.html">
+                Partners
+               </a>
+          </li>
+          <li>
+              <a class="" href="login.html">Login</a>
+          </li>
+          <li>
+              <a class="" href="get-started.html">Get Started</a>
+          </li>
+      </ul>
     </nav>
 </header>
     <div class=" section-padding">
