--- a/Estimate-mortgage.html
+++ b/Estimate-mortgage.html
@@ -2,10 +2,6 @@
 <html lang="en">
 
 <head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Privacy Policy</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
@@ -32,6 +28,8 @@
     <link rel="stylesheet" href="assets/css/color-switcher.css">
 
     <link rel="stylesheet" type="text/css" href="assets/css/colors/blue.css" media="screen" />
+    <title>Estimate Mortgage</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -66,6 +64,7 @@
                              Financing <i class="fa-solid fa-caret-down ml-1"></i>
                              </a>
                              <div class="dropdown-menu" >
+
                                 <a class="dropdown-item" href="Financing eligibility Calculator.html">Financing Eligibility Calculator</a>
                                 <a class="dropdown-item" href="Financing_ ortgage Calculator-1.html">financing-ortgage calculator-1</a>
                                 <a class="dropdown-item" href="Financing_ ortgage Calculator.html">financing-ortgage calculator</a>
@@ -158,30 +157,100 @@
             </ul>
         </nav>
     </header>
-    <div class="privacy-policy section-padding">
-        <div class="container">
-            <h3 class="font-weight-bold text-center mb-5">Terms & Conditions </h3>
-        <p>
-            Our Platform (as defined below) belongs to  MORTGAGE Bazar - FZCO a company incorporated in the United Arab Emirates and having its registered address at Mina Rashid-Queen Elizabeth2- Kiklabb on Quarter Deck-Office No A10052, QE2, Dubai, United Arab Emirates (“ us”, “ we”, “ our” and/or “Huspy”).
-            Your use of our Platform, whether to provide or avail a Service (as defined below) from us or to perform any other kind of action, shall be governed by these terms and conditions (“ Terms and Conditions”). It shall be your responsibility to periodically review these Terms and Conditions to familiarize yourself with them. By continuing to use our Platform or the Services, you are agreeing to these Terms and Conditions in full. You may not use, and shall immediately discontinue your use of our Platform or the Services if you are not able to create a legally binding agreement in accordance with applicable laws and/or if you do not agree to these Terms and Conditions in full.
-           <br> We process information about you in accordance with our Privacy Policy, available at huspy.com/privacy. By using our Platform, you agree that you have read and understood the Privacy Policy.
-        </p>
-        <p>
-            1.2 Third Party Terms and Conditions. Certain features of our Platform or the Services will be subject to additional terms and conditions from third parties and Service Providers. It shall be your responsibility to inform yourself of the Service Provider’s terms and conditions before availing a Service (including but not limited to their terms and conditions regarding payment, cancelation and liability). Terms and conditions may differ from Service Provider to Service Provider and may be amended without prior notice to you. Such terms and conditions shall form an integral part of these Terms and Conditions and any such third party and/or Service Provider shall have the right to enforce such terms and conditions against you.
-            <br>1.3 License to Use. Subject to the rest of the content of these Terms and Conditions, we hereby grant you a non-transferable, non-exclusive, revocable, limited license to use and access our Platform in accordance with these Terms and Conditions but reserve our right to revoke any or all of such authorizations at any time.
-            <br>1.4 Lawful Purposes. You agree to use our Platform and the Services for lawful purposes only and in a way that does not infringe on the rights of any third party or restrict or inhibit such third party, Buyer or Service Provider’s use and enjoyment of the same.
-            <br>1.5 Certain Restrictions. The rights granted to you under these Terms and Conditions are subject to the following restrictions:
-            <br>1.5.1. You may not and shall not modify, make derivative works of, disassemble, reverse compile or reverse engineer any part of our Platform or any of the content thereof;
-            <br>1.5.2. You may not and shall not access our Platform in order to build a similar or competitive Platform, product, and/or service;
-            <br>1.5.3. Except as expressly stated herein, no part of our Platform may be copied, modified, reproduced, distributed, republished, downloaded, displayed, posted or transmitted in any form or by any means, including but not limited to linked, framed, hyperlinked or deep-linked into any other platform, without our express written consent; and
-            <br>1.5.4. Unless otherwise indicated, any future release, update, or other addition to functionality of our Platform shall be subject to these Terms and Conditions or modified version of the same.
-            <br>1.6 Modifications. You should review these Terms and Conditions on a routine and periodic basis as we reserve our right, at any time and without prior notice to you, to suspend or discontinue our Platform or the Services, whether in whole or in part, and delete any accounts in relation thereto, and to amend or modify these Terms and Conditions to reflect changes in technology, changes in payment methods, changes in relevant laws and regulatory requirements and changes in our system's capabilities and/or features and changes in market conditions affecting our business.
-            <br>1.7 No Support, Maintenance, or Protection. You acknowledge and agree that we will have no obligation to provide you with any support or maintenance in connection with our Platform or your use thereof. We also cannot guarantee that there will be no viruses or other harmful code embedded in our Platform which could adversely affect the device you are accessing it from. It shall be your sole responsibility to ensure that your device is adequately protected against such threats.
-            <br>1.8 Term. These Terms and Conditions shall remain valid and apply at all times during your use of our Platform and the Services. Without limiting the generality of the foregoing, these Terms and Conditions (as many be amended from time to time) shall apply and shall continue to apply each and every time you open an account with us, avail or book a Service through our Platform and/or otherwise access our Platform for any other reason.
-            <br>1.9 Territory. This Platform is intended for use only by UAE residents. If you choose to use the Platform from locations outside the UAE, you do so at your sole risk.
-        </p>
-        </div>
-    </div>
+    <div class="login-section  section-padding mb-5">
+        <div class="row login-row est-mort">
+            <div class="col-md-5 col-lg-5 col-xl-5 px-0">
+                <img src="assets/images/login-images/login-image.png" class="h-100 w-100">
+            </div>
+            <div class="col-md-7 py-5 px-5 ">
+                <h2 class="font-weight-bold pl-3">Calculate your Eligibility</h2>
+
+                <div class="row pt-5">
+                    <div class="col-md-6 ">
+                        <div class="resident bg-white     border border-info rounded">
+                            <h5 class="font-weight-bold pb-2">Residency Status</h5>
+                            <select class="form-control border p-2" id="" name="">
+                                <option class="font-weight-bold ">UAE Resident</option>
+                                <option class="font-weight-bold">PAK Resident</option>
+                                <option class="font-weight-bold">IND Resident</option>
+                                <option class="font-weight-bold">BAN Resident</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-md-6  ">
+                        <div class="  bg-white px-4 py-4   rounded">
+                            <h5 class="font-weight-bold">Your Age</h5>
+                            <input id="" class="form-control" type="range" value="0" min="0" max="100">
+                            <div class=" ages d-flex justify-content-between">
+                                <span>18 years</span>
+                                <span>60 years</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row py-5">
+                    <div class="col-md-6 ">
+                        <div class="resident bg-white     border border-info rounded">
+                            <h5 class="font-weight-bold pb-2">Residency Status</h5>
+                            <select class="form-control border p-2" id="" name="">
+                                <option class="font-weight-bold ">UAE Resident</option>
+                                <option class="font-weight-bold">PAK Resident</option>
+                                <option class="font-weight-bold">IND Resident</option>
+                                <option class="font-weight-bold">BAN Resident</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-md-6 ">
+                        <div class=" px-4 py-4 bg-white   rounded">
+                            <h5 class="font-weight-bold">Your Age</h5>
+                            <input id="" class="form-control" type="range" value="0" min="0" max="100">
+                            <div class=" ages d-flex justify-content-between">
+                                <span>18 years</span>
+                                <span>60 years</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="row bg-white mx-1 loan-calculator-side">
+                    <div class="col-md-7 col-lg-7 col-xl-7 py-5 pl-5">
+                        <div>
+                          <span class="font-weight-bold">
+                              You could borrow around <strong class="d-block font-weight-bold">AED</strong>
+                              <strong class="d-block font-weight-bold">1,034,760</strong>
+                              from the bank.
+                          </span>
+                          <div class="pt-5 mt-5">
+                              <span class="font-weight-bold ">
+                                  with a monthly payment of <strong class="d-block font-weight-bold">AED</strong>
+                                  <strong class="d-block font-weight-bold">17, 240</strong>
+                                  in 5 years.
+                              </span>
+                        </div>
+                      </div>
+                  </div>
+                  <div class="col-md-5 col-lg-5 col-xl-5 px-4 py-5" >
+                      <img src="assets/images/index-images/ghar 1.png" class="w-100">
+                      <div class="text-center px-3 pt-2"> 
+                          <p class="text-center">This value could get you a 1 to  2 bedroom(s) apartment in  the UAE</p>
+                      </div>
+                  </div>
+              </div>
+              <div class="text-center pt-5 mt-5 pb-4">
+                <a href="#" class="est-start rounded font-weight-bold  py-4  ">Start Process</a>
+               </div>
+          </div>
+                        </div>
+
+
+
+
+                    </div>
+                </div>
+            </div>
+
+      
     <footer class="page-footer center-on-small-only  pt-0 footer-widget-container">
 
         <div class="container pt-5 mb-5">
@@ -219,17 +288,7 @@
 
     </footer>
 
-
-    <a href="#" class="back-to-top">
-        <div class="ripple-container"></div>
-        <i class="mdi mdi-arrow-up"></i>
-    </a>
-
-    <div id="preloader">
-        <div class="loader" id="loader-1"></div>
-    </div>
-
-
+    
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
     <script src="assets/js/jquery-min.js"></script>
     <script src="assets/js/popper.min.js"></script>
@@ -248,6 +307,7 @@
     <script src="assets/js/jquery.magnific-popup.min.js"></script>
     <script src="assets/js/jquery.slicknav.js"></script>
     <script src="assets/js/main.js"></script>
+
 </body>
 
 </html>
