--- a/sing-in.html
+++ b/sing-in.html
@@ -68,6 +68,7 @@
                             <a class="dropdown-item" href="Financing eligibility Calculator.html">Financing Eligibility Calculator</a>
                             <a class="dropdown-item" href="Financing_ ortgage Calculator-1.html">financing-ortgage calculator-1</a>
                             <a class="dropdown-item" href="Financing_ ortgage Calculator.html">financing-ortgage calculator</a>
+                            <a class="dropdown-item" href="Estimate-mortgage.html">Estimate Mortgage</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -116,33 +117,34 @@
                 </ul>
             </li>
             <li>
-                <a href="#">
+                <a href="Financing eligibility Calculator.html">
                 Financing
                 </a>
                 <ul class="dropdown">
-                    <a class="dropdown-item" href="Financing eligibility Calculator.html">Financing Eligibility Calculator</a>
-                            <a class="dropdown-item" href="Financing_ ortgage Calculator-1.html">financing-ortgage calculator-1</a>
-                            <a class="dropdown-item" href="Financing_ ortgage Calculator.html">financing-ortgage calculator</a>
-                </ul>
+                            <a class="" href="Financing eligibility Calculator.html">Financing Eligibility Calculator</a>
+                            <a class="" href="Financing_ ortgage Calculator-1.html">financing-ortgage calculator-1</a>
+                            <a class="" href="Financing_ ortgage Calculator.html">financing-ortgage calculator</a>
+                            <a class="" href="Estimate-mortgage.html">Estimate Mortgage</a>
+                        </ul>
             </li>
             <li>
-                <a href="#">
+                <a href="aboutus.html">
                     About Us
                 </a>
                 <ul class="dropdown">
-                    <a class="dropdown-item" href="blogs.html">Blogs</a>
-                    <a class="dropdown-item" href="contact-us.html">Contact Us</a>
-                    <a class="dropdown-item" href="privacy.html">Privacy Policy</a>
-                    <a class="dropdown-item" href="blogs.html">Sign Up</a>
+                    <a class="" href="blogs.html">Blogs</a>
+                    <a class="" href="contact-us.html">Contact Us</a>
+                    <a class="" href="privacy.html">Privacy Policy</a>
+                    <a class="" href="blogs.html">Sign Up</a>
                 </ul>
             </li>
             <li>
-                <a href="#">
+                <a href="career.html">
                  Careers
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="partner.html">
                   Partners
                  </a>
             </li>
